[gd_scene load_steps=21 format=4 uid="uid://djsew4jp6cfkq"]

[ext_resource type="Script" uid="uid://dmmdb76ten4w8" path="res://Scripts/game.gd" id="1_j5yw3"]
[ext_resource type="Texture2D" uid="uid://dun6tlj76f8w" path="res://Assets/backgrounds/10.png" id="2_dahhg"]
[ext_resource type="PackedScene" uid="uid://cnw2au1gjibud" path="res://Scenes/Slime.tscn" id="5_bf53h"]
[ext_resource type="AudioStream" uid="uid://cnacqddmh1ans" path="res://Assets/Sounds/others/mouse-click.mp3" id="6_7lihs"]
[ext_resource type="Texture2D" uid="uid://b65rfm6hjg6is" path="res://Assets/Tileset/GUI.png" id="6_dahhg"]
[ext_resource type="PackedScene" uid="uid://honmioa12jm3" path="res://Scenes/UI.tscn" id="7_fgofq"]
[ext_resource type="Texture2D" uid="uid://bkmn4l13ebuxl" path="res://Assets/Tileset.png" id="8_3cx6b"]
[ext_resource type="PackedScene" uid="uid://b82dttmbydpj" path="res://Scenes/MovingPlatform.tscn" id="8_dahhg"]
[ext_resource type="AudioStream" uid="uid://bc8guosq1oc6m" path="res://Assets/musics/winner_2p.mp3" id="12_3cx6b"]
[ext_resource type="PackedScene" uid="uid://dmq8j3n7np71b" path="res://Scenes/PauseMenu.tscn" id="12_3so38"]
[ext_resource type="PackedScene" uid="uid://ddbmkppjqvha" path="res://Scenes/Chest.tscn" id="12_wxwew"]
[ext_resource type="AudioStream" uid="uid://drq3scg8isstd" path="res://Assets/musics/lose.mp3" id="13_3cx6b"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wxwew"]
texture = ExtResource("6_dahhg")
3:4/size_in_atlas = Vector2i(2, 2)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.2772, -16.0974, 16.4571, -15.9175, 16.0974, 15.3779, -15.3779, 16.2772)
3:4/0/physics_layer_0/polygon_0/one_way = true
3:0/size_in_atlas = Vector2i(2, 2)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-15.9175, -16.6369, 15.9175, -16.4571, 16.4571, 15.3779, -15.9175, 15.3779)
3:0/0/physics_layer_0/polygon_0/one_way = true
9:4/size_in_atlas = Vector2i(2, 2)
9:4/0 = 0
9:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-15.9175, -15.5578, 15.9175, -15.7376, 15.9175, 15.9175, -15.5578, 15.9175)
9:4/0/physics_layer_0/polygon_0/one_way = true
14:3/next_alternative_id = 11
14:3/0 = 0
12:4/size_in_atlas = Vector2i(3, 1)
12:4/0 = 0
12:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24.3709, -8.18357, 23.4716, -7.82385, 23.8313, 8.00371, -23.4716, 7.46414)
12:4/0/physics_layer_0/polygon_0/one_way = true
0:4/next_alternative_id = 2
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/next_alternative_id = 11
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/1 = 1
1:4/1/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/2 = 2
1:4/2/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/3 = 3
1:4/3/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/4 = 4
1:4/4/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/5 = 5
1:4/5/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/6 = 6
1:4/6/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/7 = 7
1:4/7/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/8 = 8
1:4/8/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/9 = 9
1:4/9/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/next_alternative_id = 10
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:6/0 = 0
12:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:6/next_alternative_id = 10
13:6/0 = 0
13:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:6/1 = 1
13:6/1/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:6/2 = 2
13:6/2/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:6/3 = 3
13:6/3/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:6/4 = 4
13:6/4/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:6/5 = 5
13:6/5/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:6/6 = 6
13:6/6/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:6/7 = 7
13:6/7/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:6/8 = 8
13:6/8/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:6/9 = 9
13:6/9/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:6/0 = 0
14:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/next_alternative_id = 10
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/1 = 1
7:0/1/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/2 = 2
7:0/2/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/3 = 3
7:0/3/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/4 = 4
7:0/4/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/5 = 5
7:0/5/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/6 = 6
7:0/6/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/7 = 7
7:0/7/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/8 = 8
7:0/8/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/9 = 9
7:0/9/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:2/next_alternative_id = 10
13:2/0 = 0
13:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:2/1 = 1
13:2/1/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:2/2 = 2
13:2/2/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:2/3 = 3
13:2/3/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:2/4 = 4
13:2/4/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:2/5 = 5
13:2/5/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:2/6 = 6
13:2/6/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:2/7 = 7
13:2/7/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:2/8 = 8
13:2/8/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:2/9 = 9
13:2/9/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:2/0 = 0
12:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:2/0 = 0
14:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/next_alternative_id = 10
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/1 = 1
1:0/1/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/2 = 2
1:0/2/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/3 = 3
1:0/3/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/4 = 4
1:0/4/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/5 = 5
1:0/5/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/6 = 6
1:0/6/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/7 = 7
1:0/7/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/8 = 8
1:0/8/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/9 = 9
1:0/9/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_alh3a"]
texture = ExtResource("8_3cx6b")
3:4/size_in_atlas = Vector2i(2, 2)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-15.3779, -15.9175, 15.3779, -15.7376, 15.0182, 14.6585, -15.5578, 14.6585)
3:4/0/physics_layer_0/polygon_0/one_way = true
3:8/size_in_atlas = Vector2i(2, 2)
3:8/0 = 0
3:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-15.9175, -16.2772, 15.7376, -16.0974, 15.3779, 14.8383, -16.0974, 15.5578)
3:8/0/physics_layer_0/polygon_0/one_way = true
9:4/size_in_atlas = Vector2i(2, 2)
9:4/0 = 0
9:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-15.9175, -15.9175, 15.3779, -16.4571, 15.5578, 15.7376, -15.9175, 15.5578)
9:4/0/physics_layer_0/polygon_0/one_way = true
9:8/size_in_atlas = Vector2i(2, 2)
9:8/0 = 0
9:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16.3671, -14.9283, 15.5578, -15.1981, 15.9175, 15.5578, -15.7376, 16.0974)
9:8/0/physics_layer_0/polygon_0/one_way = true
12:8/size_in_atlas = Vector2i(3, 1)
12:8/0 = 0
12:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-23.6514, -7.10442, 8, -8, 23.4716, -7.644, 22.7521, -2.60795, -23.8313, -2.60795)
12:8/0/physics_layer_0/polygon_0/one_way = true
12:10/size_in_atlas = Vector2i(3, 1)
12:10/0 = 0
12:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-23.4716, -7.644, 24.3709, -7.46414, 23.8313, -2.60795, -23.4716, -2.96767)
12:10/0/physics_layer_0/polygon_0/one_way = true
6:0/size_in_atlas = Vector2i(3, 2)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-23.1118, -15.1981, 22.932, -15.1981, 23.1118, 15.7376, -22.2126, 16.6369)
6:0/0/physics_layer_0/polygon_0/one_way = true
6:4/size_in_atlas = Vector2i(3, 2)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-23.6514, -15.3779, 23.4716, -15.5578, 23.2917, 16.6369, -23.6514, 16.4571)
6:4/0/physics_layer_0/polygon_0/one_way = true
6:8/size_in_atlas = Vector2i(3, 2)
6:8/0 = 0
6:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-23.6514, -14.6585, 23.2917, -14.4786, 23.6514, 15.3779, -22.7521, 16.0974)
6:8/0/physics_layer_0/polygon_0/one_way = true
0:8/size_in_atlas = Vector2i(3, 2)
0:8/0 = 0
0:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-24.5507, -15.5578, 23.6514, -15.3779, 23.4716, 16.2772, -23.2917, 16.4571)
0:8/0/physics_layer_0/polygon_0/one_way = true

[sub_resource type="TileSet" id="TileSet_4q8tf"]
physics_layer_0/collision_layer = 5
physics_layer_0/collision_mask = 5
sources/3 = SubResource("TileSetAtlasSource_wxwew")
sources/5 = SubResource("TileSetAtlasSource_alh3a")

[sub_resource type="Curve2D" id="Curve2D_2irst"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1136, -641, 0, 0, 0, 0, 983, -641, 0, 0, 0, 0, 838, -641, 0, 0, 0, 0, 648, -638, 0, 0, 0, 0, 477, -644, 0, 0, 0, 0, 340, -633, 0, 0, 0, 0, 140, -654, 0, 0, 0, 0, 23, -651, 0, 0, 0, 0, -23, -625, 0, 0, 0, 0, -109, -623, 0, 0, 0, 0, -254, -641, 0, 0, 0, 0, -345, -641, 0, 0, 0, 0, -376, -625, 0, 0, 0, 0, -501, -628, 0, 0, 0, 0, -594, -633, 0, 0, 0, 0, -661, -605, 0, 0, 0, 0, -757, -618, 0, 0, 0, 0, -864, -618, 0, 0, 0, 0, -885, -599, 0, 0, 0, 0, -968, -625, 0, 0, 0, 0, -1019, -594, 0, 0, 0, 0, -929, -599, 0, 0, 0, 0, -853, -586, 0, 0, 0, 0, -734, -581, 0, 0, 0, 0, -620, -586, 0, 0, 0, 0, -493, -618, 0, 0, 0, 0, -337, -623, 0, 0, 0, 0, -291, -576, 0, 0, 0, 0, -158, -602, 0, 0, 0, 0, 91, -628, 0, 0, 0, 0, 298, -620, 0, 0, 0, 0, 324, -589, 0, 0, 0, 0, 438, -615, 0, 0, 0, 0, 594, -612, 0, 0, 0, 0, 622, -597, 0, 0, 0, 0, 890, -612, 0, 0, 0, 0, 934, -628, 0, 0, 0, 0, 1043, -625, 0, 0, 0, 0, 1071, -612, 0, 0, 0, 0, 768, -586, 0, 0, 0, 0, 537, -605, 0, 0, 0, 0, 394, -586, 0, 0, 0, 0, 241, -597, 0, 0, 0, 0, 88, -612, 0, 0, 0, 0, -254, -612, 0, 0, 0, 0, -366, -615, 0, 0, 0, 0, -433, -594, 0, 0, 0, 0, -724, -612, 0, 0, 0, 0, -944, -599, 0, 0, 0, 0, -1004, -597, 0, 0, 0, 0, -1035, -542, 0, 0, 0, 0, -1048, -361, 0, 0, 0, 0, -1022, -161, 0, 0, 0, 0, -916, 23, 0, 0, 0, 0, -802, 168, 0, 0, 0, 0, -551, 343, 0, 0, 0, 0, -228, 229, 0, 0, 0, 0, 64, 222, 0, 0, 0, 0, 653, 207, 0, 0, 0, 0, 273, 226)
}
point_count = 60

[sub_resource type="Curve2D" id="Curve2D_bf53h"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1091, -613, 0, 0, 0, 0, 874, -613, 0, 0, 0, 0, 650, -609, 0, 0, 0, 0, 396, -609, 0, 0, 0, 0, 168, -613, 0, 0, 0, 0, -48, -613, 0, 0, 0, 0, -257, -613, 0, 0, 0, 0, -470, -616, 0, 0, 0, 0, -694, -616, 0, 0, 0, 0, -945, -605, 0, 0, 0, 0, -998, -590, 0, 0, 0, 0, -895, -559, 0, 0, 0, 0, -686, -582, 0, 0, 0, 0, -428, -605, 0, 0, 0, 0, -22, -620, 0, 0, 0, 0, 24, -582, 0, 0, 0, 0, 39, -571, 0, 0, 0, 0, 187, -605, 0, 0, 0, 0, 411, -624, 0, 0, 0, 0, 631, -594, 0, 0, 0, 0, 950, -632, 0, 0, 0, 0, 1026, -620, 0, 0, 0, 0, 950, -567, 0, 0, 0, 0, 730, -582, 0, 0, 0, 0, 536, -628, 0, 0, 0, 0, 255, -632, 0, 0, 0, 0, 100, -616, 0, 0, 0, 0, -143, -609, 0, 0, 0, 0, -356, -586, 0, 0, 0, 0, -508, -616, 0, 0, 0, 0, -660, -624, 0, 0, 0, 0, -842, -620, 0, 0, 0, 0, -914, -582, 0, 0, 0, 0, -853, -567, 0, 0, 0, 0, -705, -590, 0, 0, 0, 0, -553, -609, 0, 0, 0, 0, -417, -624, 0, 0, 0, 0, -280, -628, 0, 0, 0, 0, -219, -594, 0, 0, 0, 0, -158, -567, 0, 0, 0, 0, -94, -597, 0, 0, 0, 0, -56, -613, 0, 0, 0, 0, 293, -605, 0, 0, 0, 0, 305, -575, 0, 0, 0, 0, 392, -609, 0, 0, 0, 0, 544, -613, 0, 0, 0, 0, 829, -601, 0, 0, 0, 0, 1007, -586, 0, 0, 0, 0, 1049, -616, 0, 0, 0, 0, 525, -575, 0, 0, 0, 0, 316, -586, 0, 0, 0, 0, 138, -616, 0, 0, 0, 0, 92, -578, 0, 0, 0, 0, -41, -563, 0, 0, 0, 0, -196, -605, 0, 0, 0, 0, -496, -616, 0, 0, 0, 0, -599, -586, 0, 0, 0, 0, -834, -609, 0, 0, 0, 0, -838, -613, 0, 0, 0, 0, -1039, -434, 0, 0, 0, 0, -1081, -297, 0, 0, 0, 0, -1089, -176, 0, 0, 0, 0, -1020, -32, 0, 0, 0, 0, -853, 154, 0, 0, 0, 0, -728, 253, 0, 0, 0, 0, -614, 318, 0, 0, 0, 0, -561, 367, 0, 0, 0, 0, -120, 257, 0, 0, 0, 0, 385, 204, 0, 0, 0, 0, 688, 170, 0, 0, 0, 0, 518, 211, 0, 0, 0, 0, 214, 208, 0, 0, 0, 0, 5, 219)
}
point_count = 73

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dahhg"]
size = Vector2(8, 2813)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3so38"]
size = Vector2(3, 2760)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_71axn"]
size = Vector2(5.25, 1845)

[node name="Game" type="Node2D"]
script = ExtResource("1_j5yw3")

[node name="PauseMenu" parent="." instance=ExtResource("12_3so38")]

[node name="UI" parent="." instance=ExtResource("7_fgofq")]

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(1.4, 1.4)
texture = ExtResource("2_dahhg")

[node name="Effect" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
process_mode = 3
position = Vector2(2, -1)
limit_left = -1150
limit_top = -650
limit_right = 1150
limit_bottom = 650
editor_draw_limits = true

[node name="SlimeBlue" parent="." instance=ExtResource("5_bf53h")]
position = Vector2(-52, -269)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="SlimeBlue"]
position = Vector2(54, 268)
remote_path = NodePath("../../Camera2D")

[node name="SlimeRed" parent="." instance=ExtResource("5_bf53h")]
position = Vector2(48, -262)
player_id = 2

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="SlimeRed"]
remote_path = NodePath("../../Camera2D")

[node name="Grounds" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAPAAgABQAGAAAAAAAMAAgABQAGAAAAAAAJAAgABQAGAAAAAAAGAAgABQAGAAAAAAADAAgABQAGAAAAAAAAAAgABQAGAAAAAADi/wgABQAGAAAAAADl/wgABQAGAAAAAADo/wgABQAGAAAAAADr/wgABQAGAAAAAADu/wgABQAGAAAAAADx/wgABQAGAAAAAAD0/wgABQAGAAAAAAD3/wgABQAGAAAAAAD6/wgABQAGAAAAAAD9/wgABQAGAAAAAAA4AAMABQAGAAAAAAA7AAMABQAGAAAAAAA+AAMABQAGAAAAAAA1AAMABQAGAAAAAAAaABAABQAAAAgAAAAXABAABQAAAAgAAAAdABAABQAAAAgAAAAgABAABQAAAAgAAAAjABAABQAAAAgAAAAmABAABQAAAAgAAADd/xkABQAGAAQAAADg/xkABQAGAAQAAADj/xkABQAGAAQAAADm/xkABQAGAAQAAADp/xkABQAGAAQAAADs/xkABQAGAAQAAADv/xkABQAGAAQAAAACABkABQAGAAQAAAAFABkABQAGAAQAAAAIABkABQAGAAQAAAALABkABQAGAAQAAAAOABkABQAGAAQAAAARABkABQAGAAQAAAAUABkABQAGAAQAAADr/w8AAwAGAAQAAADu/w8AAwAGAAQAAADx/w8AAwAGAAQAAAD0/w8AAwAGAAQAAAD3/w8AAwAGAAQAAAD6/w8AAwAGAAQAAAD9/w8AAwAGAAQAAAAAAA8AAwAGAAQAAAADAA8AAwAGAAQAAAAMABMABQAAAAQAAADn/yEAAwAAAAQAAADq/yEAAwAAAAQAAADt/yEAAwAAAAQAAADw/yEAAwAAAAQAAADz/yEAAwAAAAQAAAD2/yEAAwAAAAQAAAD5/yEAAwAAAAQAAAD8/yEAAwAAAAQAAAD//yEAAwAAAAQAAAACACEAAwAAAAQAAAAFACEAAwAAAAQAAAAIACEAAwAAAAQAAAA=")
tile_set = SubResource("TileSet_4q8tf")

[node name="ChestSpawn" type="Path2D" parent="."]
position = Vector2(-10, 1)
curve = SubResource("Curve2D_2irst")

[node name="PathFollow2D" type="PathFollow2D" parent="ChestSpawn"]
position = Vector2(1136, -641)
rotation = 3.14159

[node name="MonsterSpawn" type="Path2D" parent="."]
curve = SubResource("Curve2D_bf53h")

[node name="PathFollow2D" type="PathFollow2D" parent="MonsterSpawn"]
position = Vector2(1091, -613)
rotation = 3.14159

[node name="MovingPlatforms" type="Node2D" parent="."]

[node name="Vertical" type="Node2D" parent="MovingPlatforms"]

[node name="MovingPlatForm" parent="MovingPlatforms/Vertical" instance=ExtResource("8_dahhg")]
position = Vector2(-873, -1)

[node name="MovingPlatForm2" parent="MovingPlatforms/Vertical" instance=ExtResource("8_dahhg")]
position = Vector2(-873, 153)

[node name="MovingPlatForm3" parent="MovingPlatforms/Vertical" instance=ExtResource("8_dahhg")]
position = Vector2(-874, -152)

[node name="MovingPlatForm4" parent="MovingPlatforms/Vertical" instance=ExtResource("8_dahhg")]
position = Vector2(-878, -305)

[node name="HOrizontal" type="Node2D" parent="MovingPlatforms"]

[node name="MovingPlatForm" parent="MovingPlatforms/HOrizontal" instance=ExtResource("8_dahhg")]
position = Vector2(560, -18)
animation_track = 2

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_7lihs")

[node name="GameTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="Winner2P" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_3cx6b")
bus = &"Music"

[node name="Lose" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_3cx6b")
volume_db = -8.0
bus = &"Music"

[node name="MonsterSpawnTimer" type="Timer" parent="."]
autostart = true

[node name="ChestSpawnTimer" type="Timer" parent="."]
autostart = true

[node name="ViewPortBoundary" type="StaticBody2D" parent="."]
position = Vector2(0, 9)
collision_layer = 8
collision_mask = 0

[node name="LeftShape" type="CollisionShape2D" parent="ViewPortBoundary"]
position = Vector2(-1683, 0)
shape = SubResource("RectangleShape2D_dahhg")

[node name="RightShape" type="CollisionShape2D" parent="ViewPortBoundary"]
position = Vector2(1688, -9)
shape = SubResource("RectangleShape2D_3so38")

[node name="Boundaries" type="StaticBody2D" parent="."]
collision_layer = 9
collision_mask = 8

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(-1145, -45)
shape = SubResource("RectangleShape2D_71axn")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Boundaries"]
position = Vector2(1142, -3)
shape = SubResource("RectangleShape2D_71axn")

[node name="Chest" parent="." instance=ExtResource("12_wxwew")]
position = Vector2(-910, -464)

[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="timeout" from="MonsterSpawnTimer" to="." method="_on_monster_spawn_timer_timeout"]
[connection signal="timeout" from="ChestSpawnTimer" to="." method="_on_chest_spawn_timer_timeout"]
